# ics-planner

./: Cargo.toml  config.yml
src/: config.rs  main.rs
