[package]
name = "ics-planner"
version = "0.1.0"
authors = ["Quentin Guilloteau <Quentin.Guilloteau@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ics = "0.5"
uuid = { version = "0.8", features = ["v4"] }
